feat(habit): 新增官方习惯库页面
添加官方习惯库页面，用于在 App 内 WebView 展示精选习惯列表，方便用户一键添加。同时更新路由和页面标题以支持新功能。

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
           document.title = '记账介绍';
         } else if (p.indexOf('/habit/accounting') !== -1 || p.indexOf('/habit/ledger') !== -1) {
           document.title = '记账';
+        } else if (p.indexOf('/habit/library/official') !== -1) {
+          document.title = '官方习惯库';
         } else {
           document.title = 'Tiny Habits - Habit Tracker & Time Management App | Build Better Habits';
         }
